--- a/libsrc/jsonserver/resource.qrc
+++ b/libsrc/jsonserver/resource.qrc
@@ -1,5 +1,11 @@
 <RCC>
-    <qresource prefix="/">
-        <file>schema.json</file>
-    </qresource>
+	<qresource prefix="/">
+		<file alias="schema">schema/schema.json</file>
+		<file alias="schema-color">schema/schema-color.json</file>
+		<file alias="schema-image">schema/schema-image.json</file>
+		<file alias="schema-serverinfo">schema/schema-serverinfo.json</file>
+		<file alias="schema-clear">schema/schema-clear.json</file>
+		<file alias="schema-clearall">schema/schema-clearall.json</file>
+		<file alias="schema-transform">schema/schema-transform.json</file>
+	</qresource>
 </RCC>
