Fixed schema from resource in static lib

--- a/libsrc/hyperion/resource.qrc
+++ b/libsrc/hyperion/resource.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>hyperion.schema.json</file>
+        <file alias="hyperion-schema">hyperion.schema.json</file>
     </qresource>
 </RCC>
