--- a/libsrc/jsonserver/JsonSchemas.qrc
+++ b/libsrc/jsonserver/JsonSchemas.qrc
@@ -7,6 +7,8 @@
         <file alias="schema-clear">schema/schema-clear.json</file>
         <file alias="schema-clearall">schema/schema-clearall.json</file>
         <file alias="schema-transform">schema/schema-transform.json</file>
+        <file alias="schema-correction">schema/schema-correction.json</file>
+        <file alias="schema-temperature">schema/schema-temperature.json</file>
         <file alias="schema-effect">schema/schema-effect.json</file>
     </qresource>
 </RCC>
