--- a/assets/webconfig/css/hyperion.css
+++ b/assets/webconfig/css/hyperion.css
@@ -5,6 +5,8 @@
 		 url("../fonts/Roboto-Regular.ttf") format('ttf');
 }
 body{font-family:Roboto,"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:15px;}
+/*remove padding on all col elements for mobile view*/
+@media (max-width: 767px){div[class*="col-"] {padding:0;}}
 /*icon spacing*/
 .fa-fw{margin-right:5px;}
 
