--- a/assets/webconfig/css/hyperion.css
+++ b/assets/webconfig/css/hyperion.css
@@ -9,6 +9,8 @@ body{font-family:Roboto,"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:15
 @media (max-width: 767px){div[class*="col-"] {padding:0;}}
 /*icon spacing*/
 .fa-fw{margin-right:5px;}
+/*borderless table*/
+table.borderless td,table.borderless th{border: none !important;}
 
 /*Header*/
 .navbar-brand{padding: 5px;height:90px;}
