--- a/libsrc/leddevice/LedDeviceSchemas.qrc
+++ b/libsrc/leddevice/LedDeviceSchemas.qrc
@@ -6,6 +6,7 @@
 		<file alias="schema-atmo">schemas/schema-atmo.json</file>
 		<file alias="schema-atmoorb">schemas/schema-atmoorb.json</file>
 		<file alias="schema-e131">schemas/schema-e131.json</file>
+		<file alias="schema-tpm2netnew">schemas/schema-tpm2netnew.json</file>
 		<file alias="schema-fadecandy">schemas/schema-fadecandy.json</file>
 		<file alias="schema-file">schemas/schema-file.json</file>
 		<file alias="schema-hyperion-usbasp">schemas/schema-hyperion-usbasp.json</file>
@@ -21,7 +22,7 @@
 		<file alias="schema-sedu">schemas/schema-sedu.json</file>
 		<file alias="schema-sk6812rgbw-spi">schemas/schema-sk6812rgbw-spi.json</file>
 		<file alias="schema-tinkerforge">schemas/schema-tinkerforge.json</file>
-		<file alias="schema-tmp2net">schemas/schema-tmp2net.json</file>
+		<file alias="schema-tpm2net">schemas/schema-tpm2net.json</file>
 		<file alias="schema-tpm2.json">schemas/schema-tpm2.json</file>
 		<file alias="schema-udpraw">schemas/schema-udpraw.json</file>
 		<file alias="schema-ws2801">schemas/schema-ws2801.json</file>
