--- a/assets/webconfig/css/hyperion.css
+++ b/assets/webconfig/css/hyperion.css
@@ -48,3 +48,16 @@ table.borderless td,table.borderless th{border: none !important;}
 /*Config introduction*/
 .introd{padding-left:14px;border-left:5px solid #0088cc;}
 .introd h4{line-height:25px;}
+
+.overlay {
+	background-image: url('/img/hyperion/hyperionlogo.png');
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-color: rgba(1, 1, 1, 0.7);
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	top: 0;
+	z-index:99999;
+}
