--- a/libsrc/hyperion/resource.qrc
+++ b/libsrc/hyperion/resource.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file alias="hyperion-schema">hyperion.schema.json</file>
+        <file alias="hyperion_default.config">../../config/hyperion.config.json.default</file>
     </qresource>
 </RCC>
