--- a/libsrc/leddevice/LedDeviceSchemas.qrc
+++ b/libsrc/leddevice/LedDeviceSchemas.qrc
@@ -27,5 +27,6 @@
 		<file alias="schema-ws2801">schemas/schema-ws2801.json</file>
 		<file alias="schema-ws2812spi">schemas/schema-ws2812spi.json</file>
 		<file alias="schema-ws281x">schemas/schema-ws281x.json</file>
+		<file alias="schema-h801">schemas/schema-h801.json</file>
 	</qresource>
 </RCC>
