--- a/libsrc/leddevice/LedDeviceSchemas.qrc
+++ b/libsrc/leddevice/LedDeviceSchemas.qrc
@@ -19,6 +19,7 @@
 		<file alias="schema-piblaster">schemas/schema-piblaster.json</file>
 		<file alias="schema-rawhid">schemas/schema-rawhid.json</file>
 		<file alias="schema-sedu">schemas/schema-sedu.json</file>
+		<file alias="schema-dmx">schemas/schema-dmx.json</file>
 		<file alias="schema-sk6812rgbw-spi">schemas/schema-sk6812rgbw-spi.json</file>
 		<file alias="schema-tinkerforge">schemas/schema-tinkerforge.json</file>
 		<file alias="schema-tpm2net">schemas/schema-tpm2net.json</file>
