--- a/libsrc/jsonserver/JsonSchemas.qrc
+++ b/libsrc/jsonserver/JsonSchemas.qrc
@@ -17,5 +17,6 @@
         <file alias="schema-config">schema/schema-config.json</file>
         <file alias="schema-componentstate">schema/schema-componentstate.json</file>
         <file alias="schema-ledcolors">schema/schema-ledcolors.json</file>
+        <file alias="schema-logging">schema/schema-logging.json</file>
     </qresource>
 </RCC>
