--- a/assets/webconfig/css/sb-admin-2.css
+++ b/assets/webconfig/css/sb-admin-2.css
@@ -27,16 +27,16 @@ body {
     }
 }
 
+.nav a{
+	cursor:pointer;
+}
+
 .navbar-top-links {
     margin-right: 0;
 }
 
 .navbar-top-links li {
     display: inline-block;
-}
-
-.navbar-top-links li:last-child {
-    margin-right: 15px;
 }
 
 .navbar-top-links li a {
