--- a/assets/webconfig/css/hyperion.css
+++ b/assets/webconfig/css/hyperion.css
@@ -13,6 +13,10 @@ body{
     overflow-y: scroll; 
 }
 .btn{margin: 2px 0;}
+/* fixed brand icon */
+@media (min-width: 768px){
+	.navbar-brand{position:fixed}
+}
 
 /*mobile nav*/
 @media (max-width: 768px){
@@ -123,6 +127,7 @@ table label{margin:0}
 .support-container:hover .bg-color-btc{background-color:#f7931a; color:white;}
 .support-container:hover .bg-color-pp{background-color:#0070ba; color:white;}
 .support-container:hover .bg-color-am{background-color:#ef9c00; color:white;}
+.support-container:hover .bg-color-ig{background-color:#ab3392; color:white;}
 
 /*Config introduction*/
 .introd h4{padding-left:14px;border-left:5px solid #0088cc;}
