Use QNetworkAccessManager to handle Kodi requests
Kodi does not allow to send "commands" via method GET and using javascript leads to "Access-Control-Allow-Origin", thus create a proxy to handle our requests.

--- a/libsrc/utils/JSONRPC_schemas.qrc
+++ b/libsrc/utils/JSONRPC_schemas.qrc
@@ -18,5 +18,6 @@
         <file alias="schema-logging">JSONRPC_schema/schema-logging.json</file>
         <file alias="schema-processing">JSONRPC_schema/schema-processing.json</file>
         <file alias="schema-videomode">JSONRPC_schema/schema-videomode.json</file>
+        <file alias="schema-sendtokodi">JSONRPC_schema/schema-sendtokodi.json</file>
     </qresource>
 </RCC>
