Instance names can now be renamed on the WebUI (incl. inst 0)
Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/assets/webconfig/css/hyperion.css
+++ b/assets/webconfig/css/hyperion.css
@@ -196,6 +196,10 @@ table label{margin:0}
 	background-color:#d1322e;
 }
 
+.modal-icon-edit{
+	background-color:#3579b6;
+}
+
 .overlay {
 	background-image: url('/img/hyperion/hyperionwhitelogo.png');
 	background-repeat: no-repeat;
