--- a/assets/webconfig/css/darkMode.css
+++ b/assets/webconfig/css/darkMode.css
@@ -49,19 +49,22 @@ h4 {
 /*Buttons*/
 .btn-primary {
     background-color: #155fa0;
+    border-color: #5db6ff;
 }
 
 .btn-primary:hover{
-    background-color: #1e88e5;
+    background-color: #337ab7;
+    border-color: #82B1FF;
 }
 
 .btn-primary:focus{
-    background-color: #1e88e5;
+    background-color: #337ab7;
+    border-color: #82B1FF;
 }
 
 .btn-primary[disabled]:hover {
-    /*background-color: #018786;*/
-    /*border-color: #DDDDDD;*/
+    background-color: #337ab7;
+    border-color: #82B1FF;
 }
 
 .btn-warning {
@@ -78,14 +81,27 @@ h4 {
 
 .btn-danger {
     background-color: #861c30;
+    border-color: #d43f3a;
 }
 
 .btn-danger:hover {
     background-color: #b4102d;
+    border-color: #F44336;
 }
 
 .btn-danger:focus {
     background-color: #b4102d;
+    border-color: #F44336;
+}
+
+.btn-success {
+    background-color: darkgreen;
+    border-color: #4cae4c;
+}
+
+.btn-success:hover {
+    background-color: green;
+    border-color: #a1eea1;
 }
 
 /*Tables*/
@@ -206,6 +222,26 @@ tr:hover td {
     color: greenyellow;
 }
 
+.checkbox-success input[type="checkbox"]:checked + label::before, .checkbox-success input[type="radio"]:checked + label::before {
+    background-color: greenyellow;
+    border-color: #5cb85c;
+}
+
+.checkbox-success input[type="checkbox"]:checked + label::after, .checkbox-success input[type="radio"]:checked + label::after {
+    color: #1e1e1e;
+}
+
+.btn-group>.btn:first-child:not(:last-child):not(.dropdown-toggle) {
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.input-group-addon {
+    background-color: #333;
+    border: 1px solid #616161;
+    border-left: none;
+}
+
 /* Tabs Buttons */
 .nav-tabs {
     border-bottom: 1px solid #616161;
@@ -275,43 +311,7 @@ button.close:hover {
     color: #5db6ff;
 }
 
-/* additinal changes + fixes */
-.component-on,
-.component-on ~ span {
-    color: greenyellow;
-}
-
-.bs-callout-success {
-    border-left-color: greenyellow;
-}
-
-.btn-success {
-    background-color: darkgreen;
-    border-color: #4cae4c;
-}
-
-.btn-success:hover {
-    background-color: green;
-    border-color: #a1eea1;
-}
-
-.checkbox-success input[type="checkbox"]:checked + label::before, .checkbox-success input[type="radio"]:checked + label::before {
-    background-color: greenyellow;
-    border-color: #5cb85c;
-}
-
-.checkbox-success input[type="checkbox"]:checked + label::after, .checkbox-success input[type="radio"]:checked + label::after {
-    color: #1e1e1e;
-}
-
-.bs-callout-success h4 {
-    color: greenyellow;
-}
-
-.support-container {
-    color: #DDDDDD;
-}
-
+/*navbar fixes*/
 .navbar-top-links {
     display: table;
 }
@@ -338,34 +338,41 @@ button.close:hover {
     margin: 0 auto;
 }
 
+/* additinal changes + fixes */
+.component-on,
+.component-on ~ span {
+    color: greenyellow;
+}
+
+.support-container {
+    color: #DDDDDD;
+}
+
 .bs-callout {
     border-top: none;
     border-right: none;
     border-bottom: none;
     background-color: #424242;
 }
-#page-content .bs-callout {
-    background-color: #333;
-}
-
-tr:hover td {
-    background-color: #616161;
-}
-
-.btn-group>.btn:first-child:not(:last-child):not(.dropdown-toggle) {
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;
-}
 
 .page-header {
     border-bottom: 1px solid #616161;
 }
 
-pre {
-    background-color: #424242 !important;
-    border-color: #424242 !important;
-    box-shadow: 0px 2px 10px 0px rgba(18, 18, 18, 0.4);
-    color: #DDD;
+#page-content .bs-callout {
+    background-color: #333;
+}
+
+.bs-callout-success {
+    border-left-color: greenyellow;
+}
+
+.bs-callout-success h4 {
+    color: greenyellow;
+}
+
+tr:hover td {
+    background-color: #616161;
 }
 
 #dash_statush span[style="color:green"] {
@@ -376,8 +383,9 @@ pre {
     color:#861c30 !important;
 }
 
-.input-group-addon {
-    background-color: #333;
-    border: 1px solid #616161;
-    border-left: none;
+pre {
+    background-color: #424242 !important;
+    border-color: #424242 !important;
+    box-shadow: 0px 2px 10px 0px rgba(18, 18, 18, 0.4);
+    color: #DDD;
 }
