--- a/libsrc/leddevice/LedDeviceSchemas.qrc
+++ b/libsrc/leddevice/LedDeviceSchemas.qrc
@@ -33,5 +33,6 @@
 		<file alias="schema-ws281x">schemas/schema-ws281x.json</file>
 		<file alias="schema-karate">schemas/schema-karate.json</file>
 		<file alias="schema-nanoleaf">schemas/schema-nanoleaf.json</file>
+		<file alias="schema-wled">schemas/schema-wled.json</file>		
 	</qresource>
 </RCC>
